tests/agl/rejections/parse/nested_if_inline_branch.agl
if true => if false => pass | else => pass
